--- a/Orenda.html
+++ b/Orenda.html
@@ -236,7 +236,7 @@
 
 						</div>
 						<ul class="actions">
-							<li><a href="loves.html" class="button">NEXT Series</a></li>
+							<li><a href="index page 2.html" class="button">NEXT Page</a></li>
 						</ul>
 						<ul class="actions">
 							<li><a href="index.html" class="button">Back to MAIN</a></li>
