--- a/Six AM.html
+++ b/Six AM.html
@@ -9,7 +9,7 @@
 		<title>Six A.M.</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main4.css" />
+		<link rel="stylesheet" href="assets/css/6am.css" />
 	</head>
 	<body class="is-preload">
 
@@ -17,8 +17,8 @@
 			<header id="header">
 				<div class="inner">
 				<!--	<a href="#" class="image avatar"><img src="images/f10.jpg" alt="" /></a> -->
-					<h1><strong>A Place</strong><br />
-					You can never grow up<br />
+					<h1><strong></strong><br />
+					<br />
 					<!--crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
 				</div>
 			</header>
@@ -29,15 +29,13 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Take a rest here</h2>
+							<h2>6:00 A.M.</h2>
 								<br>
-							<h4>我想，慢慢长大</h4>
+							<h4>Location: Shanghai</h4>
 						</header>
-						<p>全世界都在催促我长大，只有迪士尼还在守护我内心的美好童话<br>
-						Teenage is the most confusing age I've ever met, sometimes I was been treated 
-						like an adult, sometimes like a child. For most of times, I lost the define of myself.
+						<p>"I want to see 6 A.M. in Shanghai"<br>
+						I setted my alarm for 5:30 A.M., ran out my compound just about 6 A.M. And these were what I saw...
 						<br>
-						But I do know, when the whole world is pushing me to grow up, I may take a rest at Disneyland and enjoy it just like a naive child. 
 						</p><br>
 
 						
@@ -52,35 +50,80 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/62.jpg" class="image fit thumb"><img src="images/62.jpg" alt="" /></a>
-								<h3>The Castle and Balloons</h3>
-								<p>Disneyland has the most colors in the World</p>
+								<h3>A boy riding Bicycle behind his dad</h3>
+								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/63.jpg" class="image fit thumb"><img src="images/63.jpg" alt="" /></a>
-								<h3>Merry-go-round</h3>
+								<h3>Bicycles under sunshine</h3>
 								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/64.jpg" class="image fit thumb"><img src="images/64.jpg" alt="" /></a>
-								<h3>Bubbles</h3>
-								<p>I shot this when I walked passby a store, the bubble machine was blowing bubbles to attract visitors. Successfully, it got me. </p>
+								<h3>Street cleaner</h3>
+								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/65.jpg" class="image fit thumb"><img src="images/65.jpg" alt="" /></a>
-								<h3>Light and U-Slide</h3>
-								<p>The sky's getting dark, I love to take the U-Slide at this time, where I can view the Disneyland at peak and the sunset's not far away</p>
+								<h3>A couple</h3>
+								<p></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/614.jpg" class="image fit thumb"><img src="images/614.jpg" alt="" /></a>
+								<h3>Breakfast Shop</h3>
+								<p></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/66.jpg" class="image fit thumb"><img src="images/66.jpg" alt="" /></a>
+								<h3>Street cleaner</h3>
+								<p></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/67.jpg" class="image fit thumb"><img src="images/67.jpg" alt="" /></a>
+								<h3>Watering Cart</h3>
+								<p></p>
+								</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/68.jpg" class="image fit thumb"><img src="images/68.jpg" alt="" /></a>
+								<h3>Trash Bin</h3>
+								<p></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/69.jpg" class="image fit thumb"><img src="images/69.jpg" alt="" /></a>
+								<h3>Doggy</h3>
+								<p></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/610.jpg" class="image fit thumb"><img src="images/610.jpg" alt="" /></a>
+								<h3>AutoBus</h3>
+								<p></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/611.jpg" class="image fit thumb"><img src="images/611.jpg" alt="" /></a>
+								<h3>Morning Assembly</h3>
+								<p></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/612.jpg" class="image fit thumb"><img src="images/612.jpg" alt="" /></a>
+								<h3>Runner</h3>
+								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/61.jpg" class="image fit thumb"><img src="images/61.jpg" alt="" /></a>
-								<h3>Night Castle</h3>
-								<p>Last photo I took before I turned myself to the direction of exit, SEE YOU NEXT TIME!</p>
+								<h3>Moon from last night</h3>
+								<p></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/613.jpg" class="image fit thumb"><img src="images/613.jpg" alt="" /></a>
+								<h3>Exercising Elders</h3>
+								<p></p>
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="tennyaki.html" class="button">NEXT Series</a></li>
+							<li><a href="suis.html" class="button">NEXT Series</a></li>
 						</ul>
 						<ul class="actions">
-							<li><a href="index.html" class="button">Back to MAIN</a></li>
+							<li><a href="index page 2.html" class="button">Back to MAIN</a></li>
 						</ul>
 					</section>
 
