--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Jinyuan Zheng</title>
+		<title>Jinyuan Zheng's Photo Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -43,7 +43,7 @@
 						<ul class="icons">
 							<!--li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li-->
-								<li><a href="https://www.instagram.com/lindaaz_0724/?hl=zh-cn" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.instagram.com/lindaaz_0724/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<!--li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li-->
 						</ul>
 					</nav>
@@ -150,19 +150,19 @@
 									<!--<a href="#" class="previous">Prev</a>-->
 									<a href="#" class="page active">1</a>
 									<a href="index page 2.html" class="page">2</a>
-									<a href="#" class="page">3</a>
+									<!--a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
 									<a href="#" class="page">8</a>
 									<a href="#" class="page">9</a>
 									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
+									<a href="#" class="next">Next</a-->
 								</div>
 							</footer>
 
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
+					<!--footer id="footer">
 						<section>
 							<form method="post" action="#">
 								<div class="fields">
@@ -208,11 +208,11 @@
 								</ul>
 							</section>
 						</section>
-					</footer>
+					</footer-->
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Jinyuan</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
