--- a/intro.html
+++ b/intro.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<a href="index.html" class="logo"><strong>Gallery</strong></a>
 						<nav>
-							<a href="#menu">Menu</a>
+							<!--a href="#menu">Menu</a-->
 						</nav>
 					</header>
 
@@ -51,7 +51,7 @@
 										
 									</span-->
 									<header class="major">
-										<h3><a href="About Krystal.html" class="links">
+										<h3><a href="Days out.html" class="links">
 											China, Shanghai</a></h3>
 										<p>I live, I grow, Since 2014</p>
 									</header>
@@ -59,7 +59,7 @@
 								</article>
 								<article>
 									<header class="major">
-										<h3><a href="About Krystal.html" class="links">
+										<h3><!--a href="About Krystal.html" class="links"-->
 											Key words of ME</a></h3>
 										<p>Enthuasiatic; Creative; Love Kids; Sporty; Brave; Determined; etc</p>
 									</header>
@@ -67,7 +67,7 @@
 								</article>
 								<article>		
 									<header class="major">
-										<h3><a href="landing.html" class="link">Photography Style</a></h3>
+										<h3><a href="index.html" class="link">Photography Style</a></h3>
 										<p>Current: Street Photography; Architecture; Motion Blur; Food</p><br>
 										<p>Looking forward: Potraits!</p>
 									</header>
@@ -88,8 +88,8 @@
 								<article>
 									
 									<header class="major">
-										<h3><a href="landing.html" class="link">Contact information</a></h3>
-										    <p>Instagram: lindazz_0724</p><br>
+										<h3 class="link">Contact information</h3>
+										    <p><a href="https://www.instagram.com/lindaaz_0724/">Instagram: lindazz_0724</a></p><br>
 										   <p>web: jinyuan-z.me</p>
 									</header>
 									<span class="image">
@@ -101,7 +101,7 @@
 										<img src="images/pic06.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="loves.html" class="link">My fav</a></h3>
+										<h3><a href="my fav.html" class="link">My fav</a></h3>
 										<p>Enjoy the moment of my life</p>
 									</header>
 								</article>
@@ -139,7 +139,7 @@
 							<ul class="icons">
 								<!--li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li-->
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.instagram.com/lindaaz_0724/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<!--li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li-->
 							</ul>
