--- a/suis.html
+++ b/suis.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Six A.M.</title>
+		<title>SUIS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main4.css" />
+		<link rel="stylesheet" href="assets/css/suis.css" />
 	</head>
 	<body class="is-preload">
 
@@ -17,8 +17,8 @@
 			<header id="header">
 				<div class="inner">
 				<!--	<a href="#" class="image avatar"><img src="images/f10.jpg" alt="" /></a> -->
-					<h1><strong>A Place</strong><br />
-					You can never grow up<br />
+					<h1><strong>Seven years</strong><br />
+					<br />
 					<!--crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
 				</div>
 			</header>
@@ -29,15 +29,15 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Take a rest here</h2>
+							<h2>SUIS PD Campus</h2>
 								<br>
-							<h4>我想，慢慢长大</h4>
+							<h4></h4>
 						</header>
-						<p>全世界都在催促我长大，只有迪士尼还在守护我内心的美好童话<br>
-						Teenage is the most confusing age I've ever met, sometimes I was been treated 
-						like an adult, sometimes like a child. For most of times, I lost the define of myself.
+						<p>I could still remember how happy was I when I received the offer from SUISPD at Wenzhou.
+							I knew a brand new life is about to start, but I was afraid to make any expectations...
 						<br>
-						But I do know, when the whole world is pushing me to grow up, I may take a rest at Disneyland and enjoy it just like a naive child. 
+						Seven years later... I am certain it has all my best memories.
+						<br>
 						</p><br>
 
 						
@@ -52,45 +52,51 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/U1.jpg" class="image fit thumb"><img src="images/U1.jpg" alt="" /></a>
-								<h3>The Castle and Balloons</h3>
-								<p>Disneyland has the most colors in the World</p>
+								<h3>Brushes</h3>
+								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/U2.jpg" class="image fit thumb"><img src="images/U2.jpg" alt="" /></a>
-								<h3>Merry-go-round</h3>
+								<h3>Paints</h3>
 								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/U3.jpg" class="image fit thumb"><img src="images/U3.jpg" alt="" /></a>
-								<h3>Bubbles</h3>
-								<p>I shot this when I walked passby a store, the bubble machine was blowing bubbles to attract visitors. Successfully, it got me. </p>
+								<h3>Coffee Bar</h3>
+								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/U4.jpg" class="image fit thumb"><img src="images/U4.jpg" alt="" /></a>
-								<h3>Light and U-Slide</h3>
-								<p>The sky's getting dark, I love to take the U-Slide at this time, where I can view the Disneyland at peak and the sunset's not far away</p>
+								<h3>Before P.E. Lesson</h3>
+								<p>Everything was at the right time</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/U5.jpg" class="image fit thumb"><img src="images/U5.jpg" alt="" /></a>
-								<h3>Night Castle</h3>
-								<p>Last photo I took before I turned myself to the direction of exit, SEE YOU NEXT TIME!</p>
+								<h3>Yellow House Flag</h3>
+								<p>As Yellow House Captain for many years, it's always my favourite COLOR.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/U6.jpg" class="image fit thumb"><img src="images/U6.jpg" alt="" /></a>
-								<h3>Night Castle</h3>
-								<p>Last photo I took before I turned myself to the direction of exit, SEE YOU NEXT TIME!</p>
+								<h3>Outside Common Room</h3>
+								<p>Inside the window is the common room for ALEVEL Students, once we step out this room, we graduate, 
+									we separate, and it's University.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/U7.jpg" class="image fit thumb"><img src="images/U7.jpg" alt="" /></a>
-								<h3>Night Castle</h3>
-								<p>Last photo I took before I turned myself to the direction of exit, SEE YOU NEXT TIME!</p>
+								<h3>Football Field</h3>
+								<p>My journey started on this field - Football - shaped me into an extroverted girl</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/U8.jpg" class="image fit thumb"><img src="images/U8.jpg" alt="" /></a>
+								<h3>China Pavilion</h3>
+								<p>Most obvious scenario for us to locate where SUISPD is.</p>
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="tennyaki.html" class="button">NEXT Series</a></li>
+							<li><a href="Lights.html" class="button">NEXT Series</a></li>
 						</ul>
 						<ul class="actions">
-							<li><a href="index.html" class="button">Back to MAIN</a></li>
+							<li><a href="index page 2.html" class="button">Back to MAIN</a></li>
 						</ul>
 					</section>
 
