--- a/Binjiang.html
+++ b/Binjiang.html
@@ -87,7 +87,7 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="Songjiang Film Studio.html" class="button">NEXT Series</a></li>
+							<li><a href="TX Huaihai.html" class="button">NEXT Series</a></li>
 						</ul>
 						<ul class="actions">
 							<li><a href="index.html" class="button">Back to MAIN</a></li>
