--- a/Days out.html
+++ b/Days out.html
@@ -6,10 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Six A.M.</title>
+		<title>Days Out in Shanghai</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main4.css" />
+		<link rel="stylesheet" href="assets/css/daysout.css" />
 	</head>
 	<body class="is-preload">
 
@@ -17,8 +17,8 @@
 			<header id="header">
 				<div class="inner">
 				<!--	<a href="#" class="image avatar"><img src="images/f10.jpg" alt="" /></a> -->
-					<h1><strong>A Place</strong><br />
-					You can never grow up<br />
+					<h1><strong>On the Zha Pu Rd. Bridge</strong><br />
+					<br />
 					<!--crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1> -->
 				</div>
 			</header>
@@ -29,15 +29,13 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Take a rest here</h2>
+							<h2>Take a day out</h2>
 								<br>
-							<h4>我想，慢慢长大</h4>
+							<h4></h4>
 						</header>
-						<p>全世界都在催促我长大，只有迪士尼还在守护我内心的美好童话<br>
-						Teenage is the most confusing age I've ever met, sometimes I was been treated 
-						like an adult, sometimes like a child. For most of times, I lost the define of myself.
+						<p>The city is much prettier than you think...<br>
+						
 						<br>
-						But I do know, when the whole world is pushing me to grow up, I may take a rest at Disneyland and enjoy it just like a naive child. 
 						</p><br>
 
 						
@@ -52,40 +50,40 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/out1.jpg" class="image fit thumb"><img src="images/out1.jpg" alt="" /></a>
-								<h3>The Castle and Balloons</h3>
-								<p>Disneyland has the most colors in the World</p>
+								<h3>Rushing riders</h3>
+								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/out2.jpg" class="image fit thumb"><img src="images/out2.jpg" alt="" /></a>
-								<h3>Merry-go-round</h3>
+								<h3>Shanghai</h3>
 								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/out3.jpg" class="image fit thumb"><img src="images/out3.jpg" alt="" /></a>
-								<h3>Bubbles</h3>
-								<p>I shot this when I walked passby a store, the bubble machine was blowing bubbles to attract visitors. Successfully, it got me. </p>
+								<h3>HongKong Road.</h3>
+								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/out4.jpg" class="image fit thumb"><img src="images/out4.jpg" alt="" /></a>
-								<h3>Light and U-Slide</h3>
-								<p>The sky's getting dark, I love to take the U-Slide at this time, where I can view the Disneyland at peak and the sunset's not far away</p>
+								<h3>Yuan Ming Yuan Road.</h3>
+								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/out5.jpg" class="image fit thumb"><img src="images/out5.jpg" alt="" /></a>
-								<h3>Night Castle</h3>
-								<p>Last photo I took before I turned myself to the direction of exit, SEE YOU NEXT TIME!</p>
+								<h3>Kid Modal</h3>
+								<p></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/out6.jpg" class="image fit thumb"><img src="images/out6.jpg" alt="" /></a>
-								<h3>Night Castle</h3>
-								<p>Last photo I took before I turned myself to the direction of exit, SEE YOU NEXT TIME!</p>
+								<h3>Iced Coca-cola</h3>
+								<p></p>
 							</article>
 						</div>
-						<ul class="actions">
+						<!--ul class="actions">
 							<li><a href="tennyaki.html" class="button">NEXT Series</a></li>
-						</ul>
+						</ul-->
 						<ul class="actions">
-							<li><a href="index.html" class="button">Back to MAIN</a></li>
+							<li><a href="index page 2.html" class="button">Back to MAIN</a></li>
 						</ul>
 					</section>
 
