--- a/index page 2.html
+++ b/index page 2.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Jinyuan Zheng</title>
+		<title>Jinyuan Zheng's Photo Website</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -30,20 +30,20 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">View more</a>
+						<a href="index page 2.html" class="logo">View more</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
-						<ul class="links">
+						<ul class="link">
 							<li class="active"><a href="index.html">Gallery</a></li>
-							<li><a href="aboutme.html">About me</a></li>
+							<li><a href="intro.html">About me</a></li>
 							<!--li><a href="elements.html">Cooperations</a></li-->
 						</ul>
 						<ul class="icons">
 							<!--li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li-->
-								<li><a href="https://www.instagram.com/lindaaz_0724/?hl=zh-cn" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="https://www.instagram.com/lindaaz_0724/" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 								<!--li><a href="#" class="icon brands fa-github"><span class="label">GitHub</span></a></li-->
 						</ul>
 					</nav>
@@ -59,9 +59,9 @@
 									Unexpected</a></h2>
 									<p>This portfolio consists my beloved PHOTOS</p>
 								</header>
-								<a href="loves.html" class="image main"><img src="images/L4.jpg" alt="" /></a>
+								<a href="my fav.html" class="image main"><img src="images/L4.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="loves.html" class="button large">View Photos</a></li>
+									<li><a href="my fav.html" class="button large">View Photos</a></li>
 								</ul>
 							</article>
 
@@ -123,19 +123,19 @@
 									<!--<a href="#" class="previous">Prev</a>-->
 									<a href="index.html" class="page">1</a>
 									<a href="#" class="page active">2</a>
-									<a href="#" class="page">3</a>
+									<!--a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
 									<a href="#" class="page">8</a>
 									<a href="#" class="page">9</a>
 									<a href="#" class="page">10</a>
-									<a href="#" class="next">Next</a>
+									<a href="#" class="next">Next</a-->
 								</div>
 							</footer>
 
 					</div>
 
 				<!-- Footer -->
-					<footer id="footer">
+					<!--footer id="footer">
 						<section>
 							<form method="post" action="#">
 								<div class="fields">
@@ -181,11 +181,11 @@
 								</ul>
 							</section>
 						</section>
-					</footer>
+					</footer-->
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
+						<ul><li>&copy; Jinyuan Zheng</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
 					</div>
 
 			</div>
