--- a/About Krystal.html
+++ b/About Krystal.html
@@ -66,76 +66,75 @@
 									and the key character in my project, Krystal, is highlighted with color.
 									<br>
 									As a high school student, she sometimes is being ignored and receives less attention from contemporary society, other than her education.
-									<br>
-									Photo by: Sony A6400
+									<br><br>
+									Digital photo by SONY A6400 (1/3 F5.0 ISO-100)
 									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/''Just For a Few minutes''.jpg" class="image fit thumb"><img src="images/''Just For a Few minutes''.jpg" alt="" /></a>
-								<h3>Just For a Few minutes</h3>
+								<h3>Just for a few minutes</h3>
 								<p>In this photograph, I want to propose a very realistic moment for high school students - taking a nap on the public transportation. Intensive 
 									exams and school assignments often take away our precious sleeping hours, therefore we can only use fragmented period to catch up on sleep. 
 									I placed my camera two rows after Krystal and shot from my eye level, in order to capture her exhausting facial expression. Also, viewers are 
 									easier to be drawn into the photo from my eye level as if they are passengers sitting behind her. I did not purposely alter the color of this 
 									image because I want to present this scene in the most realistic way since it is very common in our daily lives.
-									<br>
-									Photo by: Sony A6400
+									<br><br>
+									Digital photo by SONY A6400 (1/80 F5.0 ISO-800)
 									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/''Bicycles''.jpg" class="image fit thumb"><img src="images/''Bicycles''.jpg" alt="" /></a>
-								<h3>Bicycles</h3>
+								<h3>Back and forward</h3>
 								<p>Although nowadays there are various convenient transportations that we can choose from, bicycles are still Krystal’s favorite. She often 
 									commutes in bicycles from home to school, and during this period, she likes to indulge in her imagination as she looks around, observes, 
 									tries to capture the moment that she have missed in her busy day, and attains inspirations from the old brick walls and the citizens  along 
 									the way. Thus, in my picture, I overlapped two images of Krystal riding bicycle, which symbolized an around trip between home and school. I 
 									lowered my shutter speed to 1/13 to capture two motion blur images. The photo is warm-toned because I want to express the sense of joy and 
 									comfort that Krystal experiences on the bicycle, as she finally has a moment to take a deep breath from all the stress.
-								<br>
-								Photo by: A6400
+								<br><br>
+								Digital photos by SONY A6400 (1/13 F3.5 ISO-6400)
 								</p>
 						
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/''Sky''.jpg" class="image fit thumb"><img src="images/''Sky''.jpg" alt="" /></a>
-								<h3>Sky</h3>
+								<h3>A "perfect" world</h3>
 								<p>Krystal loves to stare at the boundless sky and zone out, and she always pulls out her camera in order to look at the 
 									sky in a closer distance, in her words: she wants to be closer to the sky. To her, the moment of looking up can 
 									temporarily relief pressures and ease her worries. In this picture, I was standing one step behind Krystal, and 
 									lowered my camera into an angle to focus on her cellphone and the blue sky that she was staring. Then I saturated 
 									the color of the sky view on her phone screen to portray a “perfect” world that seems to be far away from her. 
-									<br>
-									Photo by: Sony A6400
+									<br><br>
+									Digital photo by SONY A6400 (1/80 F5.0 ISO-800)
 									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/''Friend''.jpg" class="image fit thumb"><img src="images/''Friend''.jpg" alt="" /></a>
-								<h3>Friends</h3>
+								<h3>You are not alone</h3>
 								<p>For most high school students in Shanghai, they lack companionship since their parents are busy with their work, 
 									therefore, despite classmates, pets are the only ones they can spend time with. I used reflection in this photo 
 									because pets are somewhat similar to us, as they also desire attention from others. I placed two characters, 
 									Krystal and the dog Lamber into mirrored position, and then cut out the opposite two characters and lower their 
 									transparency to create contrast and demonstrate the idea that they complement each other.
-									<br>
-									Photo by: Sony A6400
-									</p>
+									<br><br>
+									Digital photo by SONY A6400 (1/50 F4.5 ISO-400)									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/Moment .jpg" class="image fit thumb"><img src="images/Moment .jpg" alt="" /></a>
-								<h3>Jump</h3>
+								<h3>Big Jump</h3>
 								<p>This photo is inspired by the well-known photographer Henri Cartier-Bresson’s “The Decisive Moment”. In 
 									this image, Krystal is jumping over a puddle from yesterday’s rain. This is an enjoyable moment many 
 									of us have when we were little kids, and I want to capture that innocent joy and sense of easiness that 
 									are within us. I set shutter speed to 1/200 and increased the light intensity to show her reflection on 
 									the puddle, and I increased the contrast ratio to show the reflected sky on the puddle which provides a 
 									sense of freedom to Krystal.
-									<br>
-									Photo by: Sony A6400
+									<br><br>
+									Digital photo by SONY A6400 (1/160 F4.5 ISO-200)
 									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/''Americano''.jpg" class="image fit thumb"><img src="images/''Americano''.jpg" alt="" /></a>
-								<h3>Americano</h3>
+								<h3>Recharging</h3>
 								<p>Americano is the considered to be Krystal’s best friend, as it allows keep her to stay awake. For this picture, 
 									I grouped two pictures together in diagonal line for viewers to better identify the difference between the two. 
 									I adjusted the shutter speed without changing the position, in order to capture two different moments while she 
@@ -144,25 +143,25 @@
 									very sharp and clear, which displays the effect of coffee as it stabilizes her dizziness, and Krystal is now able 
 									to continue her daily tasks. Though Americano is bitter, she has to swallow it in order to achieve high efficiency 
 									in her studies. 
-									<br>
-									Photo by: Sony A6400
+									<br><br>
+									Digital photos by SONY A6400 [1/5 F5.6 ISO-100 (Blurred)] & [SONY A6400 1/125 F5.6 ISO-3200 (Clear)]
 									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/Phone .jpg" class="image fit thumb"><img src="images/Phone .jpg" alt="" /></a>
-								<h3>Phones</h3>
+								<h3>The cellphone</h3>
 								<p>Cell phone has become an inseparable part of our daily lives. We use it for communication, internet surfing, 
 									catching up the newest event in the world, etc. In this photo, I edited the most commonly used apps to fill 
 									in the space on the phone screen, and they are great platforms for Krystal to share ideas and pictures online. 
 									Krystal has made lots of friends through applications such as Facebook and Weibo, as they allow her to connect 
 									people from different places around the globe.
-									<br>
-									Photo by: Sony A6400
+									<br><br>
+									Digital photo by SONY A6400 (1/160 F5.0 ISO-5000)
 									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/Exercise .jpg" class="image fit thumb"><img src="images/Exercise .jpg" alt="" /></a>
-								<h3>Jogging</h3>
+								<h3>Can't stop</h3>
 								<p>Body shape and appearance are emerging topics around high school students, as we start to learn how to dress and how 
 									to put on makeups. We are more sensitive to the other’s comments, and because of that, Krystal always takes out some 
 									time to jog at night to maintain a good body shape, even after a day of busy work. For this photo, I adjusted the 
@@ -170,13 +169,13 @@
 									her running on the track along the riverside with higher light intensity and contrast ratio. I put these two photos 
 									together to show that caring too much about others’ opinions could cause great mental pain, just like Krystal, who 
 									can only bear the pain and exhaustion by herself.
-									<br>
-									Photo by: Sony A6400
+									<br><br>
+									Digital photos by [SONY A6400 1/50 F5.6 ISO-6400 (Sweat Droplet)] & [SONY A6400 1/60 F5.0 ISO-6400 (Jogging)]
 									</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/Emotion .jpg" class="image fit thumb"><img src="images/Emotion .jpg" alt="" /></a>
-								<h3>Emotions</h3>
+								<h3>Bright to dark, day to night</h3>
 								<p>This image is consisted of 5 different images, and as the light intensity gradually decreases from the first one of the 
 									left to the last one, the emotion of Krystal changes drastically. Emotional instability is something that bothers high 
 									school students, which could be caused by puberty. In the morning, Krystal feels delighted because she is about to be in 
@@ -184,8 +183,8 @@
 									walks on the streets. Throughout the day, pressure accumulates from both homework and the uncertainty of the future, 
 									therefore, she experiences a sense of loneliness and melancholy, which I used dark filter to signify that emotion. I 
 									also used mosaics to blur the side between images to display that vague transition from each emotion.
-									<br>
-									Photo by: Sony A6400
+									<br><br>
+									Digital photos by SONY A6400
 									</p>
 							</article>
 						</div>
