--- a/Orenda.html
+++ b/Orenda.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>About Krystal</title>
+		<title>Orenda</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/orenda.css" />
@@ -34,7 +34,7 @@
 						</header>
 						<p>Due to the COVID-19, Government made a regulation that students are not allowed to leave their city 14 days before the school term starts. 
 							Therefore, my parents decided to take us to a nearby island - CHONGMING for a two days vacation just before the school starts. 
-							ORENDA, is the name of the vacation campus that we visited, as it's almost the work day, the only visitors there were us and the nature.
+							ORENDA, is the name of the resort that we visited...
 							<br>I enjoyed the precious time without pressures from studies, univerisities, etc... 
 						</p><br>
 
