--- a/my fav.html
+++ b/my fav.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>About Krystal</title>
+		<title>My favorite photos</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/fav.css" />
