--- a/suis.html
+++ b/suis.html
@@ -51,6 +51,16 @@
 						<h2>Photos</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/U9.jpg" class="image fit thumb"><img src="images/U9.jpg" alt="" /></a>
+								<h3>Cakes for Teacher's day</h3>
+								<p>Happy Teacher's day</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<a href="images/U10.jpg" class="image fit thumb"><img src="images/U10.jpg" alt="" /></a>
+								<h3>Teachersss</h3>
+								<p>This was our last Teacher's day at SUISPD, we prepared a surprise for all of them</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/U1.jpg" class="image fit thumb"><img src="images/U1.jpg" alt="" /></a>
 								<h3>Brushes</h3>
 								<p></p>
@@ -89,7 +99,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/U8.jpg" class="image fit thumb"><img src="images/U8.jpg" alt="" /></a>
 								<h3>China Pavilion</h3>
-								<p>Most obvious scenario for us to locate where SUISPD is.</p>
+								<p>Most obvious architecture for us to locate where SUISPD is.</p>
 							</article>
 						</div>
 						<ul class="actions">
