--- a/Days out.html
+++ b/Days out.html
@@ -83,6 +83,9 @@
 							<li><a href="tennyaki.html" class="button">NEXT Series</a></li>
 						</ul-->
 						<ul class="actions">
+							<li><a href="sportsday.html" class="button">NEXT Series</a></li>
+						</ul>
+						<ul class="actions">
 							<li><a href="index page 2.html" class="button">Back to MAIN</a></li>
 						</ul>
 					</section>
