--- a/index page 2.html
+++ b/index page 2.html
@@ -115,6 +115,30 @@
 										<li><a href="Days out.html" class="button">View Photos</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<span class="date">November 6, 2020</span>
+										<h2><a href="sportsday.html">Sports<br />
+										Day</a></h2>
+									</header>
+									<a href="sportsday.html" class="image fit"><img src="images/day (21).jpg" alt="" /></a>
+									<p>7th Sports day at SUIS, and also the last... I am glad I can maintain the moment with my camera</p>
+									<ul class="actions special">
+										<li><a href="sportsday.html" class="button">View Photos</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">November 14, 2020</span>
+										<h2><a href="GongQing Forest Park.html">Gong Qing<br />
+										Forest Park</a></h2>
+									</header>
+									<a href="GongQing Forest Park.html" class="image fit"><img src="images/gp (16).jpg" alt="" /></a>
+									<p>Autumn Time<br>The color of Yellow</p>
+									<ul class="actions special">
+										<li><a href="GongQing Forest Park.html" class="button">View Photos</a></li>
+									</ul>
+								</article>
 							</section>
 
 						<!-- Footer -->
